	  condition, by waiting in require.  [ruby-dev:49106] [Bug #11277]

Tue Aug  4 03:13:59 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (ary_ensure_room_for_push): check if array size will
	  exceed maximum size to get rid of buffer overflow.
	  [ruby-dev:49043] [Bug #11235]

	* array.c (ary_ensure_room_for_unshift, rb_ary_splice): ditto.

Sat Jul  4 23:08:32 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_load_ok): try opening file without gvl not to
	  lock entire process.  [Bug #11060]

Sat Jul  4 05:00:48 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (pkg_config): split --libs if --libs-only-l option
	  is not available.  patch in [ruby-core:69428] by Hans Mackowiak.
	  [ruby-core:69421] [Bug #11201]

Sat Jul  4 04:46:51 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_compile_each): out of range NTH_REF is always
	  nil.

	* parse.y (parse_numvar): check overflow of NTH_REF and range.
	  [ruby-core:69393] [Bug #11192]

	* util.c (ruby_scan_digits): make public and add length parameter.

Sat Jul  4 04:35:51 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_method_call_status): resolve refined method entry
	  to check if undefined.  [ruby-core:69064] [Bug #11117]

Sat Jul  4 04:35:51 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_method_call_status): undefined refined method is
	  not callable unless using.  [ruby-core:69064] [Bug #11117]

Wed Jul  1 04:16:56 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.gemspec: Fix require paths for released gem.
	  [fix GH-929] Patch by @voxik
	* ext/io/console/io-console.gemspec: ditto.

Wed Jul  1 04:15:38 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/zlib/zlib.c: Fix indentation for rdoc.
	  [Bug #11221][ruby-core:69465]

Sat Jun 27 22:51:59 2015  Shota Fukumori  <her@sorah.jp>

	* ext/objspace/objspace_dump.c(dump_object): Return empty JSON object when