@@ -82,6 +82,12 @@ Tue Aug  4 03:13:59 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* array.c (ary_ensure_room_for_unshift, rb_ary_splice): ditto.
 
+Wed Jul  8 04:42:27 2015  Eric Wong  <e@80x24.org>
+
+	* iseq.c (iseq_data_to_ary): dump kw_arg as symbol
+	* test/-ext-/iseq_load/test_iseq_load.rb: test kw_arg roundtrip
+	  [ruby-core:69891] [Bug #11338]
+
 Sat Jul  4 23:08:32 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* file.c (rb_file_load_ok): try opening file without gvl not to
